fixed s2 layout issue on maxwidth 1150

--- a/src/components/Section2/Section2MediaQueries.css
+++ b/src/components/Section2/Section2MediaQueries.css
@@ -1,11 +1,15 @@
-@media screen and (max-width: 1150px){
+@media screen and (max-width: 1250px){
     .s2-content-container {
         justify-content: center;
         gap: 40px;
     }
 
+    .s2-text-container {
+        order: -1;
+    }
+
     .s2-img-container {
-        order: 2;
+        order: 1;
         height: 502px;
         margin-right: 0;
     }
